[package]
name = "lottie-rs"
version = "0.2.17"
authors = [
    "René Coignard <contact@renecoignard.com>"
]
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-or-later"
description = "A simple yet powerful Fountain screenplay editor"
homepage = "https://lottie.rs/"
repository = "https://github.com/coignard/lottie"
readme = "README.md"
keywords = ["fountain", "screenplay", "editor", "terminal", "tui"]
categories = ["text-editors", "command-line-utilities"]
exclude = [".github/*"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.3"
unicode-width = "0.2.2"
supports-color = "3.0.2"
supports-unicode = "3.0.0"
directories = "6.0.0"

[dev-dependencies]
proptest = "1.11.0"
criterion = "0.8.2"

[[bench]]
name = "engine_bench"
harness = false

[lib]
name = "lottie_rs"
path = "src/lib.rs"

[[bin]]
name = "lottie"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
